--- a/vista/css/register.css
+++ b/vista/css/register.css
@@ -1,4 +1,5 @@
 @import url(/vista/css/style.css);
+@import url(/vista/css/login.css);
 
 body {
   background-color: var(--color-fondo);
@@ -85,6 +86,7 @@ body {
   cursor: pointer;
   transition: background-color 0.3s ease;
   font-size: 20px;
+  text-decoration: none;
 }
 
 .registro__boton:hover {
@@ -102,3 +104,34 @@ body {
   color: var(--color-blanco);
   text-decoration: none;
 }
+
+/* estilo carga de archivos */
+.input-file {
+  display: none;
+}
+
+.input-file-label {
+  display: inline-block;
+  background-color: #333;
+  color: #ccc;
+  padding: 10px 20px;
+  border: 2px solid var(--color-secundario2);
+  border-radius: 8px;
+  cursor: pointer;
+  transition: background 0.3s, color 0.3s;
+  font-family: sans-serif;
+  margin-top: 40px;
+}
+
+.input-file-label:hover {
+  background-color: var(--color-principal);
+  color: #000;
+}
+
+.file-name {
+  display: block;
+  margin-top: 10px;
+  color: #ccc;
+  font-style: italic;
+}
+
