--- a/vista/css/register.css
+++ b/vista/css/register.css
@@ -105,7 +105,7 @@ body {
   text-decoration: none;
 }
 
-/* estilo carga de archivos */
+/* estilos carga de archivos */
 .input-file {
   display: none;
 }
